--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <!---section-about----->
     <section class="about block" id="about">
         <div class="about-img">
-            <img src="assete/ranjit.jpg" alt="mypic">
+            <img src="assete/ranjit.png" alt="mypic">
         </div>
 
         <div class="about-text">
